--- a/wp-content/themes/meetrd/layouts/meetrd-custom-style-pink.css
+++ b/wp-content/themes/meetrd/layouts/meetrd-custom-style-pink.css
@@ -9,9 +9,9 @@ Version: 1.0.0
 html,
 body {
     font-size: 14px !important;
-    color: rgb(84, 84, 84) !important;
+    color: rgb( 35, 35, 35) !important;
     height: 100%;
-    font-family: "Oswald", Open Sans, Helvetica, sans-serif!important;
+    font-family: "Raleway", Open Sans, Helvetica, sans-serif!important;
     font-weight: 300;
 }
 
@@ -19,50 +19,56 @@ body {
 /* Fonts */
 
 p {
-    font-family: "Oswald", Open Sans, Helvetica, sans-serif!important;
+    font-family: "Raleway", Open Sans, Helvetica, sans-serif!important;
     font-weight: 300;
+    color: rgb(35, 35, 35) !important;
 }
 
 h1 {
-    font-family: "Oswald", Open Sans, Helvetica, sans-serif!important;
+    font-family: "Raleway Bold", Open Sans, Helvetica, sans-serif!important;
     font-weight: 300;
 }
 
 h2 {
-    font-family: "Oswald", Open Sans, Helvetica, sans-serif!important;
+    font-family: "Raleway Bold", Open Sans, Helvetica, sans-serif!important;
     font-weight: 300;
 }
 
 h3 {
-    font-family: "Oswald", Open Sans, Helvetica, sans-serif!important;
+    font-family: "Raleway Bold", Open Sans, Helvetica, sans-serif!important;
     font-weight: 300;
 }
 
 h4 {
-    font-family: "Oswald", Open Sans, Helvetica, sans-serif!important;
+    font-family: "Raleway Bold", Open Sans, Helvetica, sans-serif!important;
     font-weight: 300;
 }
 
 h5 {
-    font-family: "Oswald", Open Sans, Helvetica, sans-serif!important;
+    font-family: "Raleway Bold", Open Sans, Helvetica, sans-serif!important;
     font-weight: 300;
 }
 
 a {
-    font-family: "Oswald", Open Sans, Helvetica, sans-serif!important;
+    font-family: "Raleway", Open Sans, Helvetica, sans-serif!important;
     font-weight: 400;
     text-decoration: none;
-    color: #000 !important;
+    color: rgb(35, 35, 35) !important;
+}
+
+i {
+    color: rgb(230, 0, 138) !important;
 }
 
 a:hover,
 a:focus,
 a:active {
     text-decoration: underline;
+    color: rgb(230, 0, 138) !important;
 }
 
 a:visited {
-    color: #000 !important;
+    color: rgb(35, 35, 35);
     text-decoration: none;
 }
 
@@ -94,7 +100,42 @@ img {
 }
 
 .btn-meetrd:hover {
-    background-color: rgba(255, 255, 255, 0.4) !important;
+    background-color: rgb(255, 255, 255) !important;
+    color: rgb(230, 0, 138) !important;
+    border-color: rgb(230, 0, 138) !important;
+}
+
+.btn-primary {
+    background-color: rgb(230, 0, 138) !important;
+}
+
+select.btn-primary {
+    background-color: rgb(35, 35, 35) !important;
+}
+
+.chosen-slot.btn-primary {
+    background-color: rgb(35, 35, 35) !important;
+}
+
+._720kb-datepicker-calendar-header i {
+    color: rgb(255, 255, 255) !important;
+}
+
+._720kb-datepicker-calendar-header {
+    background-color: rgb(35, 35, 35) !important;
+    color: rgb(255, 255, 255) !important;
+}
+
+._720kb-datepicker-calendar-month {
+    color: rgb(255, 255, 255) !important;
+}
+
+._720kb-datepicker-calendar-month span {
+    color: rgb(255, 255, 255) !important;
+}
+
+.input-group-btn > .btn {
+    min-height: 46px;
 }
 
 input {
@@ -113,12 +154,12 @@ input[type="button"] input[type="text"],
 input[type="number"],
 input[type="tel"] {
     border-radius: 0 !important;
-    color: rgb(84, 84, 84) !important;
+    color: rgb( 35, 35, 35) !important;
 }
 
 datepicker input[type="text"] {
     border-radius: 0;
-    color: rgb(84, 84, 84) !important;
+    color: rgb( 35, 35, 35) !important;
 }
 
 datepicker::-moz-placeholder {
@@ -303,10 +344,10 @@ input .form-control .ng-pristine .ng-valid .ng-valid-min .ng-touched {
     padding: 22px 10px 10px 10px !important;
 }
 .nav-tabs li a:hover {
-    border-top: 3px solid rgb(36, 67, 99) !important;
+    border-top: 3px solid rgb( 230, 0, 138) !important;
     background-color: transparent !important;
     border-radius: 0;
-    color: rgb(36, 67, 99) !important;
+    color: rgb( 230, 0, 138) !important;
     padding: 18px 10px 10px 10px !important;
 }
 .nav {
@@ -392,7 +433,7 @@ input .form-control .ng-pristine .ng-valid .ng-valid-min .ng-touched {
     color: #000;
 }
 .one-step i {
-    color: rgb(50, 93, 136);
+    color: rgb(230, 0, 138);
     margin-bottom: -2px;
 }
 .one-step img {
@@ -417,6 +458,8 @@ input .form-control .ng-pristine .ng-valid .ng-valid-min .ng-touched {
     margin-top: 30px;
     text-align: center;
     color: black;
+    font-family: "Raleway Bold", Open Sans, Helvetica, sans-serif!important;
+    font-weight: 300;
 }
 .host-banner-slogan {
     //font-weight: bold;
@@ -632,7 +675,7 @@ input .form-control .ng-pristine .ng-valid .ng-valid-min .ng-touched {
     vertical-align: bottom !important;
 }
 .booking-option datepicker input {
-    background: rgb(50, 93, 136);
+    background: rgb(35, 35, 35);
     color: #fff !important;
     text-align: center;
 }
@@ -644,7 +687,7 @@ input .form-control .ng-pristine .ng-valid .ng-valid-min .ng-touched {
     padding-bottom: 5px;
 }
 .room-price-container {
-    background-color: #325D88;
+    background-color: rgb(230, 0, 138);
     height: 30px;
     color: #fff;
     border: 0;
