--- a/wp-content/themes/meetrd/layouts/meetrd-custom-style.css
+++ b/wp-content/themes/meetrd/layouts/meetrd-custom-style.css
@@ -9,9 +9,9 @@ Version: 1.0.0
 html,
 body {
     font-size: 14px !important;
-    color: rgb(84, 84, 84) !important;
+    color: rgb( 35, 35, 35) !important;
     height: 100%;
-    font-family: "Oswald", Open Sans, Helvetica, sans-serif!important;
+    font-family: "Raleway", Open Sans, Helvetica, sans-serif!important;
     font-weight: 300;
 }
 
@@ -19,55 +19,138 @@ body {
 /* Fonts */
 
 p {
-    font-family: "Oswald", Open Sans, Helvetica, sans-serif!important;
+    font-family: "Raleway", Open Sans, Helvetica, sans-serif!important;
     font-weight: 300;
+    color: rgb(35, 35, 35) !important;
 }
 
 h1 {
-    font-family: "Oswald", Open Sans, Helvetica, sans-serif!important;
+    font-family: "Raleway Bold", Open Sans, Helvetica, sans-serif!important;
     font-weight: 300;
 }
 
 h2 {
-    font-family: "Oswald", Open Sans, Helvetica, sans-serif!important;
+    font-family: "Raleway Bold", Open Sans, Helvetica, sans-serif!important;
     font-weight: 300;
 }
 
 h3 {
-    font-family: "Oswald", Open Sans, Helvetica, sans-serif!important;
+    font-family: "Raleway Bold", Open Sans, Helvetica, sans-serif!important;
     font-weight: 300;
 }
 
 h4 {
-    font-family: "Oswald", Open Sans, Helvetica, sans-serif!important;
+    font-family: "Raleway Bold", Open Sans, Helvetica, sans-serif!important;
     font-weight: 300;
 }
 
 h5 {
-    font-family: "Oswald", Open Sans, Helvetica, sans-serif!important;
+    font-family: "Raleway Bold", Open Sans, Helvetica, sans-serif!important;
     font-weight: 300;
 }
 
 a {
-    font-family: "Oswald", Open Sans, Helvetica, sans-serif!important;
+    font-family: "Raleway", Open Sans, Helvetica, sans-serif!important;
     font-weight: 400;
     text-decoration: none;
-    color: #000 !important;
+    color: rgb(35, 35, 35) !important;
+}
+
+input,
+button,
+select,
+textarea,
+datepicker {
+    font-family: "Raleway", Open Sans, Helvetica, sans-serif!important;
+}
+
+datepicker,
+.datepicker,
+[datepicker],
+._720kb-datepicker-calendar-header,
+._720kb-datepicker-calendar-body,
+._720kb-datepicker-calendar-days-header,
+._720kb-datepicker-calendar-years-pagination-pages {
+    font-family: "Raleway", Open Sans, Helvetica, sans-serif!important;
+}
+
+._720kb-datepicker-calendar-day._720kb-datepicker-disabled,
+._720kb-datepicker-calendar-day._720kb-datepicker-disabled:hover,
+._720kb-datepicker-calendar-years-pagination a._720kb-datepicker-disabled,
+._720kb-datepicker-calendar-years-pagination a._720kb-datepicker-disabled:hover,
+._720kb-datepicker-calendar-years-pagination a._720kb-datepicker-active._720kb-datepicker-disabled,
+._720kb-datepicker-calendar-years-pagination a._720kb-datepicker-active._720kb-datepicker-disabled:hover {
+    background: rgba(212, 22, 22, 0.7) !important;
+}
+
+._720kb-datepicker-calendar-day:hover,
+._720kb-datepicker-calendar-day._720kb-datepicker-active {
+    background: rgb(230, 0, 135) !important;
+    color: #fff !important;
+}
+
+._720kb-datepicker-calendar-days-header {
+    background: #f1f1f1 !important;
+}
+
+._720kb-datepicker-calendar-days-header div {
+    font-weight: normal !important;
+}
+
+#single-room i,
+.room-info-container i,
+.booking-option i {
+    color: rgb(230, 0, 138) !important;
 }
 
 a:hover,
 a:focus,
 a:active {
     text-decoration: underline;
+    color: rgb(230, 0, 138) !important;
 }
 
 a:visited {
-    color: #000 !important;
+    color: rgb(35, 35, 35);
     text-decoration: none;
 }
 
 img {
     -ms-interpolation-mode: bicubic;
+}
+
+
+/* SPIN THAT SHIT */
+
+@-moz-keyframes spin {
+    100% {
+        -moz-transform: rotate(360deg);
+    }
+}
+
+@-webkit-keyframes spin {
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+@keyframes spin {
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+.spin {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 120px;
+    height: 120px;
+    margin: -60px 0 0 -60px;
+    -webkit-animation: spin 4s linear infinite;
+    -moz-animation: spin 4s linear infinite;
+    animation: spin 4s linear infinite;
 }
 
 
@@ -94,7 +177,67 @@ img {
 }
 
 .btn-meetrd:hover {
-    background-color: rgba(255, 255, 255, 0.4) !important;
+    background-color: rgb(255, 255, 255) !important;
+    color: rgb(230, 0, 138) !important;
+    border-color: rgb(230, 0, 138) !important;
+}
+
+.btn-primary {
+    background-color: rgb(230, 0, 138) !important;
+    /*    color: #fff !important;*/
+}
+
+.btn-danger {
+    background-color: #f1f1f1 !important;
+    color: rgb(35, 35, 35) !important;
+}
+
+.btn-primary a {
+    color: #fff !important;
+}
+
+.btn-primary a:hover {
+    text-decoration: none;
+}
+
+select.btn-primary,
+select.btn-primary:focus,
+select.btn-primary:active,
+select.btn-primary:hover,
+select.btn-primary:visited {
+    background-color: #f1f1f1 !important;
+    box-shadow: inset 0 0 5px rgb(230, 0, 138);
+    color: #000 !important;
+    outline: 0 !important;
+}
+
+.chosen-slot.btn-primary {
+    background-color: #f1f1f1 !important;
+    box-shadow: inset 0 0 5px rgb(230, 0, 135);
+    color: #000 !important;
+    outline: 0 !important;
+}
+
+._720kb-datepicker-calendar-header i {
+    color: rgb(230, 0, 138) !important;
+}
+
+._720kb-datepicker-calendar-header {
+    background-color: #f1f1f1 !important;
+    color: rgb(35, 35, 35) !important;
+}
+
+._720kb-datepicker-calendar-month {
+    color: rgb(35, 35, 35) !important;
+}
+
+._720kb-datepicker-calendar-month span {
+    color: rgb(35, 35, 35) !important;
+    font-weight: normal;
+}
+
+.input-group-btn > .btn {
+    min-height: 46px;
 }
 
 input {
@@ -113,12 +256,12 @@ input[type="button"] input[type="text"],
 input[type="number"],
 input[type="tel"] {
     border-radius: 0 !important;
-    color: rgb(84, 84, 84) !important;
+    color: rgb( 35, 35, 35) !important;
 }
 
 datepicker input[type="text"] {
     border-radius: 0;
-    color: rgb(84, 84, 84) !important;
+    color: rgb( 35, 35, 35) !important;
 }
 
 datepicker::-moz-placeholder {
@@ -238,24 +381,65 @@ input .form-control .ng-pristine .ng-valid .ng-valid-min .ng-touched {
 .block-display {
     display: block !important;
 }
+.room.type-room.status-publish.hentry {
+    margin-bottom: 0 !important;
+}
+
+/*HOST CAROUSEL*/
+#popular-hosts-container {
+    margin-top: 20px;
+}
 #popular-hosts-container .owl-lazy {
-    min-height: 150px !important;
-    max-height: 150px !important;
-    height: 150px !important;
+    width: 100%;
+    min-width: 100%;
 }
 #popular-hosts-container .default-theme.wp-posts-carousel .wp-posts-carousel-title {
-    min-height: 57px;
+    display: none !important;
 }
 #popular-hosts-container .default-theme.wp-posts-carousel .wp-posts-carousel-desc {
-    min-height: 130px;
-    text-align: left;
+    text-align: center;
 }
-#popular-hosts-container .default-theme.wp-posts-carousel .wp-posts-carousel-created-date {
-    padding-left: 5px;
-    text-align: left;
+#popular-hosts-container .default-theme.wp-posts-carousel .wp-posts-carousel-desc .address {
+    /*    color: rgb(230, 0, 138);*/
+    
+    font-family: "Raleway Bold", Open Sans, Helvetica, sans-serif !important;
+    font-size: 16px;
+}
+#popular-hosts-container .default-theme.wp-posts-carousel .wp-posts-carousel-desc .host-name {
+    margin: 15px 0;
+    font-family: "Raleway Bold", Open Sans, Helvetica, sans-serif!important;
+}
+#popular-hosts-container .default-theme.wp-posts-carousel .wp-posts-carousel-desc .room-info {}
+#popular-hosts-container .default-theme.wp-posts-carousel .wp-posts-carousel-desc .book-button-container {
+    margin-top: 40px;
+}
+#popular-hosts-container .default-theme.wp-posts-carousel .wp-posts-carousel-desc .book-button-container button {
+    width: 120px;
 }
 #popular-hosts-container .default-theme.wp-posts-carousel .wp-posts-carousel-buttons {
     margin-bottom: 0;
+}
+#popular-hosts-container .default-theme.wp-posts-carousel .wp-posts-carousel-image {
+    padding-top: 0;
+}
+#popular-hosts-container .default-theme.wp-posts-carousel .wp-posts-carousel-image img {
+    margin: 0;
+    width: 100%;
+}
+#room-carousel-loader.loader-container {
+    max-width: 35%;
+    margin: 0 auto;
+}
+#popular-hosts-container .default-theme.wp-posts-carousel .wp-posts-carousel-container {
+    padding: 0;
+}
+.all-hosts-link {
+    font-size: 25px;
+    margin-bottom: 15px;
+}
+.default-theme.wp-posts-carousel .owl-controls .owl-nav div {
+    background-color: #fff !important;
+    color: rgb(230, 0, 138) !important;
 }
 .blog-posts-container .owl-lazy {
     min-height: 150px !important;
@@ -263,10 +447,10 @@ input .form-control .ng-pristine .ng-valid .ng-valid-min .ng-touched {
     height: 150px !important;
 }
 .blog-posts-container .default-theme.wp-posts-carousel .wp-posts-carousel-title {
-    min-height: 57px;
+    min-height: 80px;
 }
 .blog-posts-container .default-theme.wp-posts-carousel .wp-posts-carousel-desc {
-    min-height: 150px;
+    min-height: 200px;
     text-align: left;
 }
 .blog-posts-container .default-theme.wp-posts-carousel .wp-posts-carousel-created-date {
@@ -322,10 +506,10 @@ input .form-control .ng-pristine .ng-valid .ng-valid-min .ng-touched {
     padding: 22px 10px 10px 10px !important;
 }
 .nav-tabs li a:hover {
-    border-top: 3px solid rgb(36, 67, 99) !important;
+    border-top: 3px solid rgb( 230, 0, 138) !important;
     background-color: transparent !important;
     border-radius: 0;
-    color: rgb(36, 67, 99) !important;
+    color: rgb( 230, 0, 138) !important;
     padding: 18px 10px 10px 10px !important;
 }
 .nav {
@@ -411,7 +595,7 @@ input .form-control .ng-pristine .ng-valid .ng-valid-min .ng-touched {
     color: #000;
 }
 .one-step i {
-    color: rgb(50, 93, 136);
+    color: rgb(230, 0, 138);
     margin-bottom: -2px;
 }
 .one-step img {
@@ -436,6 +620,8 @@ input .form-control .ng-pristine .ng-valid .ng-valid-min .ng-touched {
     margin-top: 30px;
     text-align: center;
     color: black;
+    font-family: "Raleway Bold", Open Sans, Helvetica, sans-serif!important;
+    font-weight: 300;
 }
 .host-banner-slogan {
     //font-weight: bold;
@@ -651,8 +837,8 @@ input .form-control .ng-pristine .ng-valid .ng-valid-min .ng-touched {
     vertical-align: bottom !important;
 }
 .booking-option datepicker input {
-    background: rgb(50, 93, 136);
-    color: #fff !important;
+    background: #f1f1f1;
+    box-shadow: inset 0 0 5px rgb(230, 0, 135) !important;
     text-align: center;
 }
 .booking-option i {
@@ -663,7 +849,7 @@ input .form-control .ng-pristine .ng-valid .ng-valid-min .ng-touched {
     padding-bottom: 5px;
 }
 .room-price-container {
-    background-color: #325D88;
+    background-color: rgb(230, 0, 138);
     height: 30px;
     color: #fff;
     border: 0;
@@ -1368,6 +1554,10 @@ input .form-control .ng-pristine .ng-valid .ng-valid-min .ng-touched {
     
     .user {
         padding-top: 0;
+    }
+    
+    .popular-hosts {
+        font-size: 24px;
     }
     
     @media(max-width: 990px) {
